CHANGE THE ENTIRE GET AND POST METHOD
